# Template-Blank

./: .gitignore  .pulsar_fs_meta  Cargo.toml  Newlevel.level.json  Pulsar.toml  PulsarCamera.fbx  README.md  monkey.fbx  test_data.db
Drawable/: trait.json
EntityId/: PulsarCamera2.fbx  alias.json
GameState/: enum.json
Inventory/: struct.json
NewPulsarImageFormat_1.pif/: manifest.json
NewPulsarImageFormat_1.pif/.raster/: layer_background_0_0.qoi  layer_background_0_1.qoi  layer_background_0_2.qoi  layer_background_0_3.qoi  layer_background_1_0.qoi  layer_background_1_1.qoi  layer_background_1_2.qoi  layer_background_1_3.qoi  layer_background_2_0.qoi  layer_background_2_1.qoi  layer_background_2_2.qoi  layer_background_2_3.qoi  layer_background_3_0.qoi  layer_background_3_1.qoi  layer_background_3_2.qoi  layer_background_3_3.qoi  layer_background_4_0.qoi  layer_background_4_2.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_0_0.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_0_1.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_1_0.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_1_1.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_2_0.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_2_1.qoi  layer_layer-a03af55b-6ec4-439d-b842-a49a6d363676_3_0.qoi
PlayerData/: struct.json
Pulsar/: level.json
scene/: default.level
scenes/: default.level
scenes/meshes/: spaceship.mtl
src/: .pulsar_fs_meta  engine_main.rs  main.rs
src/assets/: .pulsar_fs_meta
src/classes/: mod.rs
ui_alias_editor/src/: block_canvas.rs  lib.rs  (+3 more)
(+30 files in other folders)
