[package]
name = "mygame"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A brief description."
license = "MIT"
repository = ""
keywords = ["game", "engine", "pulsar-native"]
categories = ["game-engines", "multimedia", "graphics"]
readme = "README.md"

[dependencies]
pulsar_std = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev="e67992fcad90421ea1c748a28ef4085f16c064c5" }