[package]
name = "blank_project"
version = "0.1.0"
edition = "2021"
description = "Generated Pulsar game project: blank_project"


[dependencies]
pulsar_game = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
helio = { git = "https://github.com/Far-Beyond-Pulsar/Helio" }
